--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGODB_CONNECTION_STRING="mongodb+srv://flyingpenguin999:RP5JWCFOFugF3Ub1@booking-app.ppaeafy.mongodb.net/?retryWrites=true&w=majority&appName=booking-app"
-JWT_SECRET_KEY="hMjP8EmgxPPTlgWX8KX7TK4xSPvf0YWF "
+JWT_SECRET_KEY="hMjP8EmgxPPTlgWX8KX7TK4xSPvf0YWF"
+FRONTEND_URL=http://localhost:5173
